--- a/.gitignore
+++ b/.gitignore
@@ -215,4 +215,6 @@ $RECYCLE.BIN/
 # Windows shortcuts
 *.lnk
 
+mongo_data
+
 # End of https://www.toptal.com/developers/gitignore/api/node,windows,macos,linux
